--- a/asmaa-allah-quiz/index.html
+++ b/asmaa-allah-quiz/index.html
@@ -4,18 +4,34 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>الكلمات الخفية • أسماء الله الحسنى</title>
+
 <style>
+/* === Polices === */
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;800&display=swap');
+/* Si tu ajoutes la TTF locale, place-la (par ex.) dans ../assets/NotoKufiArabic.ttf  */
+@font-face{
+  font-family:"NotoKufiArabicLocal";
+  src:url("../assets/NotoKufiArabic.ttf") format("truetype");
+  font-display:swap;
+}
+
+/* === Thème / variables === */
 :root{
   --ink:#0f172a; --accent:#1f7ae0; --ok:#16a34a; --warn:#f59e0b;
   --glass: rgba(255,255,255,0.85);
   --cell: 44px; /* يُضبط تلقائيًا بالسكربت */
+
+  --brand:#1f7ae0;
+  --brand-deep:#1557a8;
+  --muted:#29425f;
+  --ring:rgba(31,122,224,.25);
 }
 
 /* ===== خلفية مبهجة ===== */
 html,body{height:100%}
 body{
   margin:0; color:var(--ink);
-  font-family:system-ui,-apple-system,"Noto Kufi Arabic","Cairo",Tahoma,Arial;
+  font-family:"Tajawal","NotoKufiArabicLocal","Noto Kufi Arabic","Cairo",system-ui,-apple-system,"Segoe UI",Tahoma,Arial;
   background: linear-gradient(35deg,#55c6ff 0%, #1f7ae0 100%) fixed;
 }
 body::before{
@@ -40,22 +56,56 @@ header, .card{
 header{position:sticky;top:0;z-index:5;margin-bottom:12px;}
 .wrap{max-width:1000px;margin:auto;padding:12px}
 
-/* الشعار */
-.brandbar{display:flex;align-items:center;gap:12px}
-.brand{height:64px;filter:drop-shadow(0 2px 4px rgba(0,0,0,.16))}
-@media (max-width:520px){.brand{height:52px}}
+/* ===== الهيدر الجديد (نظيف، مع الشعار) ===== */
+.brandbar{
+  display:flex; align-items:center; justify-content:space-between; gap:12px;
+}
+.brandbox{
+  display:flex; align-items:center; gap:14px;
+}
+.brand{
+  height:56px; width:56px; border-radius:14px;
+  filter:drop-shadow(0 4px 12px rgba(0,0,0,.2));
+}
+.brand-title{ line-height:1.1; }
+.brand-title .t1{
+  font-weight:800; font-size:clamp(20px,3.2vw,30px);
+  color:#fff; background:var(--brand);
+  padding:6px 12px; border-radius:10px;
+}
+.brand-title .t2{
+  margin-top:6px; font-weight:700; color:var(--brand-deep);
+  font-size:clamp(14px,2.2vw,18px);
+}
 
-/* عناصر أعلى الصفحة */
+/* bouton retour accueil */
+.brand-cta{
+  display:inline-flex; align-items:center; gap:10px;
+  background:#1f7ae0; color:#fff; border:none; border-radius:12px;
+  padding:10px 14px; font-weight:800; cursor:pointer;
+  box-shadow:0 8px 22px rgba(31,122,224,.28);
+}
+.brand-cta:hover{ background:#1557a8 }
+
+/* عناصر أعلى الصفحة (لوحة الخيارات) */
 h1{font-size:22px;margin:0}
-.controls{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:8px}
-select,button{padding:10px 12px;border:1px solid rgba(255,255,255,0.65);background:rgba(255,255,255,0.96);border-radius:12px;font-size:14px}
-button.primary{background:#1f7ae0;border-color:#1f7ae0;color:#fff;box-shadow:0 6px 16px rgba(31,122,224,.25)}
+.controls{
+  display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:12px
+}
+select,button{
+  padding:10px 12px;border:1px solid rgba(255,255,255,0.65);
+  background:rgba(255,255,255,0.96);border-radius:12px;font-size:14px
+}
+button.primary{
+  background:#1f7ae0;border-color:#1f7ae0;color:#fff;
+  box-shadow:0 6px 16px rgba(31,122,224,.25)
+}
 
 /* تخطيط سطح مكتب */
 main .wrap{display:grid;grid-template-columns:1fr 320px;gap:16px}
 .grid-wrap{overflow:hidden;height:var(--gridH,70vh);} /* لا تمرير داخل الشبكة */
 
-/* ✅ الهاتف (عمودي): الهيدر غير مثبت حتى لا يغطي الشبكة */
+/* ✅ الهاتف (عمودي) */
 @media (max-width:900px){
   header{ position: static; margin-bottom:12px; }
   .controls{ gap:6px; }
@@ -83,13 +133,12 @@ main .wrap{display:grid;grid-template-columns:1fr 320px;gap:16px}
   font-weight:800;transition:transform .12s,background .3s,border-color .3s;
   box-shadow:0 2px 6px rgba(31,122,224,.08);
 }
-.cell.preview{ outline:2px dashed #1f7ae0; }        /* أثناء السحب */
-.cell.valid-preview{ outline:2px solid var(--warn);} /* تطابق كامل قبل الإفلات */
+.cell.preview{ outline:2px dashed #1f7ae0; }
+.cell.valid-preview{ outline:2px solid var(--warn);}
 
-/* تلميح أوضح (زر إظهار/إخفاء) */
+/* تلميح واضح */
 .cell.hint{
-  background:#fff3bf;               /* أصفر فاتح مبهج */
-  border-color:#ffd04a;
+  background:#fff3bf; border-color:#ffd04a;
   box-shadow:inset 0 0 0 2px #ffd04a33, 0 2px 6px rgba(31,122,224,.08);
 }
 
@@ -101,7 +150,7 @@ main .wrap{display:grid;grid-template-columns:1fr 320px;gap:16px}
 .target{display:flex;flex-wrap:wrap;gap:8px}
 .badge{background:#fff;border:1px solid #e5eefc;padding:8px 11px;border-radius:999px;font-size:14px;box-shadow:0 1px 3px rgba(31,122,224,.08)}
 .badge.found{background:#e8f7ee;border-color:#b7e3c8;color:#055a43}
-.help{font-size:13px;color:#29425f;line-height:1.7}
+.help{font-size:13px;color:var(--muted);line-height:1.7}
 .footer{font-size:12px;color:#eef6ff;margin-top:6px;text-shadow:0 1px 2px rgba(0,0,0,.2)}
 hr{border:none;border-top:1px solid #e7f0ff;margin:10px 0}
 </style>
@@ -110,19 +159,32 @@ hr{border:none;border-top:1px solid #e7f0ff;margin:10px 0}
 
 <header>
   <div class="wrap">
-    <div class="brandbar">
-      <img class="brand" src="edufun-logo.png" alt="EDUFUN">
-      <h1>🧩 الكلمات الخفية — <span style="color:#1f7ae0">أسماء الله الحسنى</span></h1>
+    <div class="brandbar" dir="rtl">
+      <div class="brandbox">
+        <img class="brand" src="edufun-logo.png" alt="EDUFUN">
+        <div class="brand-title">
+          <div class="t1">الكلمات الخفية</div>
+          <div class="t2">أسماء الله الحسنى</div>
+        </div>
+      </div>
+      <button class="brand-cta" onclick="location.href='../'">الصفحة الرئيسية</button>
     </div>
+
     <div class="controls">
       <label>المستوى: <select id="level"></select></label>
-      <label>عدد الأسماء/المستوى: <select id="chunk">
-        <option value="6">6</option><option value="8" selected>8</option>
-        <option value="10">10</option><option value="12">12</option>
-      </select></label>
+      <label>عدد الأسماء/المستوى:
+        <select id="chunk">
+          <option value="6">6</option>
+          <option value="8" selected>8</option>
+          <option value="10">10</option>
+          <option value="12">12</option>
+        </select>
+      </label>
       <label>حجم الشبكة:
         <select id="size">
-          <option value="8">8 × 8</option><option value="10" selected>10 × 10</option><option value="12">12 × 12</option>
+          <option value="8">8 × 8</option>
+          <option value="10" selected>10 × 10</option>
+          <option value="12">12 × 12</option>
         </select>
       </label>
       <button id="regen" class="primary">إعادة توليد الشبكة</button>
