--- a/asmaa-allah-quiz/index.html
+++ b/asmaa-allah-quiz/index.html
@@ -4,154 +4,80 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>الكلمات الخفية • أسماء الله الحسنى</title>
-
 <style>
-/* === Polices === */
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;800&display=swap');
-/* Si tu ajoutes la TTF locale, place-la (par ex.) dans ../assets/NotoKufiArabic.ttf  */
-@font-face{
-  font-family:"NotoKufiArabicLocal";
-  src:url("../assets/NotoKufiArabic.ttf") format("truetype");
-  font-display:swap;
-}
-
-/* === Thème / variables === */
 :root{
-  --ink:#0f172a; --accent:#1f7ae0; --ok:#16a34a; --warn:#f59e0b;
-  --glass: rgba(255,255,255,0.85);
-  --cell: 44px; /* يُضبط تلقائيًا بالسكربت */
-
-  --brand:#1f7ae0;
-  --brand-deep:#1557a8;
-  --muted:#29425f;
-  --ring:rgba(31,122,224,.25);
+  --ink:#0f172a; --accent:#22c55e; --ok:#16a34a; --warn:#f59e0b;
+  --glass: rgba(255,255,255,0.9);
+  --cell: 48px;
 }
-
-/* ===== خلفية مبهجة ===== */
 html,body{height:100%}
 body{
   margin:0; color:var(--ink);
-  font-family:"Tajawal","NotoKufiArabicLocal","Noto Kufi Arabic","Cairo",system-ui,-apple-system,"Segoe UI",Tahoma,Arial;
-  background: linear-gradient(35deg,#55c6ff 0%, #1f7ae0 100%) fixed;
-}
-body::before{
-  content:""; position:fixed; inset:0; z-index:-2;
-  background:url('edufun-bg.png') center/cover no-repeat;
-  filter:saturate(108%) contrast(110%);
+  font-family:"Tajawal",system-ui,-apple-system,"Segoe UI",Tahoma,Arial;
+  background: radial-gradient(1000px 600px at 20% -10%, #d1fae5, transparent 60%), linear-gradient(35deg,#99f6e4 0%, #22c55e 100%) fixed;
 }
 body::after{
   content:""; position:fixed; inset:auto 0 16px 16px; width:160px; height:70px; z-index:-1;
-  background:url("edufun-logo.png") no-repeat left/contain;
-  opacity:.10; pointer-events:none;
+  background:url("../edufun-logo-512.png") no-repeat left/contain; opacity:.12; pointer-events:none;
 }
-
-/* ===== حاويات زجاجية ===== */
 header, .card{
   background: var(--glass);
   backdrop-filter: blur(10px);
-  border:1px solid rgba(255,255,255,0.65);
+  border:1px solid rgba(255,255,255,0.7);
   border-radius:18px;
-  box-shadow:0 10px 30px rgba(31,122,224,.18);
+  box-shadow:0 10px 30px rgba(34,197,94,.18);
 }
 header{position:sticky;top:0;z-index:5;margin-bottom:12px;}
-.wrap{max-width:1000px;margin:auto;padding:12px}
-
-/* ===== الهيدر الجديد (نظيف، مع الشعار) ===== */
-.brandbar{
-  display:flex; align-items:center; justify-content:space-between; gap:12px;
-}
-.brandbox{
-  display:flex; align-items:center; gap:14px;
-}
-.brand{
-  height:56px; width:56px; border-radius:14px;
-  filter:drop-shadow(0 4px 12px rgba(0,0,0,.2));
-}
-.brand-title{ line-height:1.1; }
-.brand-title .t1{
-  font-weight:800; font-size:clamp(20px,3.2vw,30px);
-  color:#fff; background:var(--brand);
-  padding:6px 12px; border-radius:10px;
-}
-.brand-title .t2{
-  margin-top:6px; font-weight:700; color:var(--brand-deep);
-  font-size:clamp(14px,2.2vw,18px);
-}
-
-/* bouton retour accueil */
+.wrap{max-width:1100px;margin:auto;padding:12px}
+.brandbar{ display:flex; align-items:center; justify-content:space-between; gap:12px; }
+.brandbox{ display:flex; align-items:center; gap:14px; }
+.brand{ height:56px; width:auto; border-radius:14px; filter:drop-shadow(0 4px 12px rgba(0,0,0,.2)); }
+.brand-title .t1{ font-weight:800; font-size:clamp(20px,3.2vw,30px); color:#064e3b; background:#bbf7d0; padding:6px 12px; border-radius:10px; }
+.brand-title .t2{ margin-top:6px; font-weight:700; color:#065f46; font-size:clamp(14px,2.2vw,18px); }
 .brand-cta{
   display:inline-flex; align-items:center; gap:10px;
-  background:#1f7ae0; color:#fff; border:none; border-radius:12px;
-  padding:10px 14px; font-weight:800; cursor:pointer;
-  box-shadow:0 8px 22px rgba(31,122,224,.28);
+  background:#22c55e; color:#fff; border:none; border-radius:12px;
+  padding:10px 14px; font-weight:800; cursor:pointer; box-shadow:0 8px 22px rgba(34,197,94,.28);
 }
-.brand-cta:hover{ background:#1557a8 }
+.brand-cta:hover{ background:#16a34a }
 
-/* عناصر أعلى الصفحة (لوحة الخيارات) */
-h1{font-size:22px;margin:0}
-.controls{
-  display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:12px
-}
+.controls{ display:flex; gap:8px; flex-wrap:wrap; align-items:center; margin-top:12px }
 select,button{
-  padding:10px 12px;border:1px solid rgba(255,255,255,0.65);
-  background:rgba(255,255,255,0.96);border-radius:12px;font-size:14px
+  padding:10px 12px;border:1px solid rgba(255,255,255,0.7);
+  background:rgba(255,255,255,0.96);border-radius:12px;font-size:16px
 }
-button.primary{
-  background:#1f7ae0;border-color:#1f7ae0;color:#fff;
-  box-shadow:0 6px 16px rgba(31,122,224,.25)
-}
+button.primary{ background:#22c55e;border-color:#22c55e;color:#fff; box-shadow:0 6px 16px rgba(34,197,94,.25) }
 
-/* تخطيط سطح مكتب */
-main .wrap{display:grid;grid-template-columns:1fr 320px;gap:16px}
-.grid-wrap{overflow:hidden;height:var(--gridH,70vh);} /* لا تمرير داخل الشبكة */
-
-/* ✅ الهاتف (عمودي) */
+main .wrap{display:grid;grid-template-columns:1fr 340px;gap:16px}
+.grid-wrap{overflow:hidden;height:var(--gridH,70vh);}
+@media (max-width:1000px){ main .wrap{ grid-template-columns:1fr; } aside.card{ order:2; } }
 @media (max-width:900px){
   header{ position: static; margin-bottom:12px; }
-  .controls{ gap:6px; }
   .grid-wrap{ margin-top:0; height:var(--gridH,68vh); }
-  main .wrap{ grid-template-columns:1fr; }
-  aside.card{ margin-top:10px; }
 }
 
-/* ===== الشبكة ===== */
-.grid{
-  --n:10;
-  display:grid;
-  grid-template-columns:repeat(var(--n),var(--cell));
-  grid-auto-rows:var(--cell);
-  gap:4px;
-  user-select:none;
-  touch-action:none;
-  padding:6px;
-}
+.grid{ --n:10; display:grid; grid-template-columns:repeat(var(--n),var(--cell)); grid-auto-rows:var(--cell); gap:6px; user-select:none; touch-action:none; padding:8px; }
 .cell{
   width:var(--cell);height:var(--cell);
-  border-radius:14px;background:#fff;border:1px solid #eaf1fb;
+  border-radius:18px;background:#fff;border:2px solid #eaf1fb;
   display:flex;align-items:center;justify-content:center;
-  font-size:clamp(16px,calc(var(--cell)*.55),28px);
+  font-size:clamp(20px,calc(var(--cell)*.56),30px);
   font-weight:800;transition:transform .12s,background .3s,border-color .3s;
-  box-shadow:0 2px 6px rgba(31,122,224,.08);
+  box-shadow:0 3px 8px rgba(34,197,94,.10);
 }
-.cell.preview{ outline:2px dashed #1f7ae0; }
-.cell.valid-preview{ outline:2px solid var(--warn);}
-
-/* تلميح واضح */
-.cell.hint{
-  background:#fff3bf; border-color:#ffd04a;
-  box-shadow:inset 0 0 0 2px #ffd04a33, 0 2px 6px rgba(31,122,224,.08);
-}
-
-.cell.found{background:#e8f7ee;border-color:#b7e3c8;color:#055a43}
+.cell.preview{ outline:3px dashed #22c55e; }
+.cell.valid-preview{ outline:3px solid #f59e0b; }
+.cell.hint{ background:#fff7d6; border-color:#ffd04a; }
+.cell.found{background:#dcfce7;border-color:#86efac;color:#065f46}
 .cell.flash{animation:flashOk 1s ease-in-out 3}
-@keyframes flashOk{0%,100%{background:#e8f7ee}50%{background:#16a34a;color:#fff;transform:scale(1.05)}}
+@keyframes flashOk{0%,100%{background:#dcfce7}50%{background:#22c55e;color:#fff;transform:scale(1.05)}}
 
-/* أهداف */
 .target{display:flex;flex-wrap:wrap;gap:8px}
-.badge{background:#fff;border:1px solid #e5eefc;padding:8px 11px;border-radius:999px;font-size:14px;box-shadow:0 1px 3px rgba(31,122,224,.08)}
-.badge.found{background:#e8f7ee;border-color:#b7e3c8;color:#055a43}
-.help{font-size:13px;color:var(--muted);line-height:1.7}
-.footer{font-size:12px;color:#eef6ff;margin-top:6px;text-shadow:0 1px 2px rgba(0,0,0,.2)}
+.badge{background:#fff;border:1px solid #e5eefc;padding:10px 12px;border-radius:999px;font-size:16px;box-shadow:0 1px 3px rgba(34,197,94,.08)}
+.badge.found{background:#dcfce7;border-color:#86efac;color:#065f46}
+.help{font-size:15px;color:#065f46;line-height:1.7}
+.footer{font-size:14px;color:#064e3b;margin-top:6px;text-shadow:0 1px 2px rgba(0,0,0,.08)}
 hr{border:none;border-top:1px solid #e7f0ff;margin:10px 0}
 </style>
 </head>
@@ -159,12 +85,12 @@ hr{border:none;border-top:1px solid #e7f0ff;margin:10px 0}
 
 <header>
   <div class="wrap">
-    <div class="brandbar" dir="rtl">
+    <div class="brandbar">
       <div class="brandbox">
-        <img class="brand" src="edufun-logo.png" alt="EDUFUN">
+        <img class="brand" src="../edufun-logo-512.png" alt="EDUFUN">
         <div class="brand-title">
-          <div class="t1">الكلمات الخفية</div>
-          <div class="t2">أسماء الله الحسنى</div>
+          <div class="t1">الكلمات الخفية — <span style="color:#065f46">أسماء الله الحسنى</span></div>
+          <div class="t2">تعلم ممتع مع مؤثرات مرئية وصوتية</div>
         </div>
       </div>
       <button class="brand-cta" onclick="location.href='../'">الصفحة الرئيسية</button>
@@ -174,21 +100,17 @@ hr{border:none;border-top:1px solid #e7f0ff;margin:10px 0}
       <label>المستوى: <select id="level"></select></label>
       <label>عدد الأسماء/المستوى:
         <select id="chunk">
-          <option value="6">6</option>
-          <option value="8" selected>8</option>
-          <option value="10">10</option>
-          <option value="12">12</option>
+          <option value="6">6</option><option value="8" selected>8</option>
+          <option value="10">10</option><option value="12">12</option>
         </select>
       </label>
       <label>حجم الشبكة:
         <select id="size">
-          <option value="8">8 × 8</option>
-          <option value="10" selected>10 × 10</option>
-          <option value="12">12 × 12</option>
+          <option value="8">8 × 8</option><option value="10" selected>10 × 10</option><option value="12">12 × 12</option>
         </select>
       </label>
       <button id="regen" class="primary">إعادة توليد الشبكة</button>
-      <button id="showHints">إظهار/إخفاء تلميحات</button>
+      <button id="showHints">تلميحات</button>
     </div>
   </div>
 </header>
@@ -204,9 +126,7 @@ hr{border:none;border-top:1px solid #e7f0ff;margin:10px 0}
       <h3 id="listTitle">الأسماء المستهدفة</h3>
       <div id="targets" class="target"></div>
       <hr>
-      <div class="help">
-        انقر على أول حرف ثم اسحب إلى آخره. الاتجاهات المسموحة: يمين ⇠ يسار، أو أعلى ⇣ أسفل. (لا قطريات)
-      </div>
+      <div class="help">انقر على أول حرف ثم اسحب إلى آخره. الاتجاهات: يمين ⇠ يسار أو أعلى ⇣ أسفل.</div>
     </aside>
   </div>
 </main>
@@ -239,9 +159,8 @@ btnHints=document.getElementById('showHints');
 /* حالة عامة */
 let N=+sizeSel.value, CHUNK=+chunkSel.value;
 let LEVELS=[], cells=[], board=[], isWord=[], targetNames=[], remaining=new Set();
-let hintsOn=false;  // حالة زر التلميحات
+let hintsOn=false;
 
-/* أدوات */
 const AR_RANDOM="ابتثجحخدذرزسشصضطظعغفقكلمنهوي";
 const randLetter=()=>AR_RANDOM[Math.floor(Math.random()*AR_RANDOM.length)];
 const normalize=s=>s.replace(/\s+/g,'').replace(/ـ/g,'').replace(/[^\u0600-\u06FF]/g,'');
@@ -257,13 +176,11 @@ function rebuildLevels(){
 }
 rebuildLevels();
 
-/* بناء الشبكة */
 function buildGrid(){
   gridEl.innerHTML=''; cells=[];
   for(let i=0;i<N*N;i++){const d=document.createElement('div');d.className='cell';d.dataset.index=i;gridEl.appendChild(d);cells.push(d);}
 }
 
-/* وضع الكلمات: يمين←يسار أو أعلى↓أسفل */
 function tryPlace(word){
   const chars=normalize(word).split(''), L=chars.length;
   if(L>N) return false;
@@ -279,11 +196,7 @@ function tryPlace(word){
       if(!inBounds(rr,cc) || (board[rr][cc] && board[rr][cc]!==chars[k])){ ok=false; break; }
     }
     if(!ok) continue;
-    for(let k=0;k<L;k++){
-      const rr=r+dir.dr*k, cc=c+dir.dc*k;
-      board[rr][cc]  = chars[k];
-      isWord[rr][cc] = true;            // تعليم أنها خلية كلمة
-    }
+    for(let k=0;k<L;k++){ const rr=r+dir.dr*k, cc=c+dir.dc*k; board[rr][cc]=chars[k]; isWord[rr][cc]=true; }
     return true;
   }
   return false;
@@ -296,13 +209,12 @@ function generate(i){
   let names=pickSubset(eligible, Math.min(CHUNK, eligible.length));
   names.sort((a,b)=>normalize(b).length-normalize(a).length);
 
-  // تهيئة اللوح ومصفوفة مواضع الكلمات
   board  = Array.from({length:N},()=>Array(N).fill(null));
   isWord = Array.from({length:N},()=>Array(N).fill(false));
 
   let placed=true;
   for(const nm of names){ if(!tryPlace(nm)){ placed=false; break; } }
-  if(!placed){ // محاولة ثانية مع تقليل قليل إن لزم
+  if(!placed){
     for(let attempt=0; attempt<3 && !placed; attempt++){
       names.pop();
       board  = Array.from({length:N},()=>Array(N).fill(null));
@@ -338,7 +250,7 @@ function textFrom(L){ let s=''; for(const p of L) s+=board[p.r][p.c]; return s; 
 function isExact(L){ const p=textFrom(L); for(const n of remaining) if(normalize(n)===p) return n; return null; }
 function isPrefix(L){ const p=textFrom(L); for(const n of remaining){ if(normalize(n).startsWith(p)) return true; } return false; }
 
-/* مؤثرات صوتية + احتفال */
+/* مؤثرات */
 let actx=null;
 function ensureAudio(){ if(!actx){ actx=new (window.AudioContext||window.webkitAudioContext)(); } }
 function tone(freq, dur=0.12, type='sine', gain=0.08, when=0){
@@ -354,7 +266,7 @@ function confettiBurst(){
   const c=document.createElement('canvas'); c.width=innerWidth; c.height=innerHeight;
   Object.assign(c.style,{position:'fixed',inset:'0',pointerEvents:'none',zIndex:9999});
   document.body.appendChild(c);
-  const ctx=c.getContext('2d'), pcs=[], cols=['#ff6b6b','#ffd166','#06d6a0','#1f7ae0','#8338ec'];
+  const ctx=c.getContext('2d'), pcs=[], cols=['#ff6b6b','#ffd166','#06d6a0','#22c55e','#3b82f6'];
   for(let i=0;i<160;i++) pcs.push({x:Math.random()*c.width,y:-20-Math.random()*200,r:6+Math.random()*6,col:cols[(Math.random()*cols.length)|0],vx:-1+Math.random()*2,vy:2+Math.random()*2,rot:Math.random()*Math.PI,vr:(-0.1+Math.random()*0.2)});
   let t=0; (function a(){ ctx.clearRect(0,0,c.width,c.height);
     pcs.forEach(p=>{ p.x+=p.vx; p.y+=p.vy; p.vy+=0.05; p.rot+=p.vr; ctx.save(); ctx.translate(p.x,p.y); ctx.rotate(p.rot); ctx.fillStyle=p.col; ctx.fillRect(-p.r/2,-p.r/2,p.r,p.r); ctx.restore(); });
@@ -362,54 +274,7 @@ function confettiBurst(){
   })();
 }
 
-/* ===== تفاعل باللمس/السحب ===== */
-let start=null, lastPreview=[];
-function posFromEl(el){ const i=+el.dataset.index; return {r:Math.floor(i/N), c:i%N}; }
-function clearPreview(){ lastPreview.forEach(p=>cells[idx(p.r,p.c)].classList.remove('preview','valid-preview')); lastPreview=[]; }
-function setPreview(L, exact=false){
-  clearPreview();
-  if(!L) return;
-  L.forEach(p=>cells[idx(p.r,p.c)].classList.add(exact?'valid-preview':'preview'));
-  lastPreview=L.slice();
-}
-
-gridEl.addEventListener('pointerdown', e=>{
-  const t=e.target.closest('.cell'); if(!t) return;
-  ensureAudio();
-  e.preventDefault();
-  gridEl.setPointerCapture(e.pointerId);
-  start=posFromEl(t);
-  setPreview([start], false);
-});
-gridEl.addEventListener('pointermove', e=>{
-  if(!start) return;
-  const el=document.elementFromPoint(e.clientX, e.clientY);
-  const cell=(el && el.classList && el.classList.contains('cell'))? el : e.target.closest('.cell');
-  if(!cell) return;
-  const end=posFromEl(cell);
-  const L=collectLine(start,end);
-  if(!L){ clearPreview(); return; }
-  const exact=isExact(L);
-  if(exact){ setPreview(L, true); }       // تطابق كامل قبل الإفلات
-  else if(isPrefix(L)){ setPreview(L, false); } // مسار محتمل
-  else{ clearPreview(); }
-});
-function commitIfValid(){
-  if(!start || !lastPreview.length) return;
-  const exactName=isExact(lastPreview);
-  if(exactName){
-    remaining.delete(exactName);
-    lastPreview.forEach(p=>gridEl.children[idx(p.r,p.c)].classList.add('found','flash'));
-    markBadgeFound(exactName); updateStatus(); playDing();
-    if(remaining.size===0){ statusEl.textContent="أحسنت! ✅"; playWin(); }
-    applyHints(); // تحديث التلميحات لإخفاء الخلايا التي تم إيجادها
-  }
-  clearPreview(); start=null;
-}
-gridEl.addEventListener('pointerup',    ()=>commitIfValid());
-gridEl.addEventListener('pointercancel',()=>{ clearPreview(); start=null; });
-
-/* زر التلميحات */
+/* تلميحات */
 function applyHints(){
   for(let r=0;r<N;r++){
     for(let c=0;c<N;c++){
@@ -420,19 +285,69 @@ function applyHints(){
     }
   }
 }
-btnHints.onclick = () => {
-  hintsOn = !hintsOn;
-  btnHints.setAttribute('aria-pressed', hintsOn ? 'true' : 'false');
-  applyHints();
-};
+btnHints.onclick = () => { hintsOn = !hintsOn; applyHints(); };
 
-/* أزرار أخرى */
+/* ===== تفاعل باللمس/السحب — Correctif mobile ===== */
+function xyToCell(x, y){
+  const rect = gridEl.getBoundingClientRect();
+  const styles = getComputedStyle(gridEl);
+  const gap = parseFloat(styles.gap) || 0;
+  const cellSize = (rect.width - gap*(N-1)) / N;
+  let c = Math.floor((x - rect.left) / (cellSize + gap));
+  let r = Math.floor((y - rect.top)  / (cellSize + gap));
+  if (r < 0 || c < 0 || r >= N || c >= N) return null;
+  return cells[idx(r,c)];
+}
+let start=null, lastPreview=[];
+function posFromEl(el){ const i=+el.dataset.index; return {r:Math.floor(i/N), c:i%N}; }
+function clearPreview(){ lastPreview.forEach(p=>cells[idx(p.r,p.c)].classList.remove('preview','valid-preview')); lastPreview=[]; }
+function setPreview(L, exact=false){ clearPreview(); if(!L) return; L.forEach(p=>cells[idx(p.r,p.c)].classList.add(exact?'valid-preview':'preview')); lastPreview=L.slice(); }
+function onPointerDown(e){
+  const t = e.target.closest('.cell') || xyToCell(e.clientX, e.clientY);
+  if (!t) return;
+  ensureAudio(); e.preventDefault();
+  start = posFromEl(t); setPreview([start], false);
+}
+function onPointerMove(e){
+  if (!start) return;
+  e.preventDefault();
+  const cell = xyToCell(e.clientX, e.clientY);
+  if (!cell){ clearPreview(); return; }
+  const end = posFromEl(cell);
+  const L = collectLine(start, end);
+  if(!L){ clearPreview(); return; }
+  const exact = isExact(L);
+  if(exact){ setPreview(L, true); }
+  else if(isPrefix(L)){ setPreview(L, false); }
+  else{ clearPreview(); }
+}
+function commitIfValid(){
+  if(!start || !lastPreview.length){ start=null; clearPreview(); return; }
+  const exactName = isExact(lastPreview);
+  if(exactName){
+    remaining.delete(exactName);
+    lastPreview.forEach(p=>gridEl.children[idx(p.r,p.c)].classList.add('found','flash'));
+    markBadgeFound(exactName); updateStatus(); playDing();
+    if(remaining.size===0){ statusEl.textContent="أحسنت! ✅"; playWin(); }
+    applyHints();
+  }
+  start = null; clearPreview();
+}
+function onPointerUp(){ commitIfValid(); }
+function onPointerLeave(){ start=null; clearPreview(); }
+
+gridEl.addEventListener('pointerdown', onPointerDown, {passive:false});
+gridEl.addEventListener('pointermove', onPointerMove, {passive:false});
+gridEl.addEventListener('pointerleave', onPointerLeave, {passive:true});
+window.addEventListener('pointerup', onPointerUp, {passive:true});
+
+/* أزرار */
 btnRegen.onclick=()=>generate(+levelSel.value);
 sizeSel.onchange=()=>{ N=+sizeSel.value; gridEl.style.setProperty('--n',N); generate(+levelSel.value); };
 chunkSel.onchange=()=>{ CHUNK=+chunkSel.value; rebuildLevels(); generate(+levelSel.value); };
 levelSel.onchange=()=>generate(+levelSel.value);
 
-/* ===== ملاءمة الشبكة بلا تمرير ===== */
+/* Fit grid */
 function sizeGridWrap(){
   const header=document.querySelector('header');
   const wrap=gridEl.parentElement;
@@ -441,9 +356,9 @@ function sizeGridWrap(){
 }
 function fitGrid(){
   const wrap=gridEl.parentElement, styles=getComputedStyle(gridEl);
-  const gap=parseFloat(styles.gap)||0, W=wrap.clientWidth-4, H=wrap.clientHeight-4;
+  const gap=parseFloat(styles.gap)||0, W=wrap.clientWidth-6, H=wrap.clientHeight-6;
   const cW=(W-gap*(N-1))/N, cH=(H-gap*(N-1))/N;
-  document.documentElement.style.setProperty('--cell', Math.floor(Math.max(22, Math.min(cW, cH)))+'px');
+  document.documentElement.style.setProperty('--cell', Math.floor(Math.max(26, Math.min(cW, cH)))+'px');
 }
 function refitAll(){ sizeGridWrap(); fitGrid(); }
 window.addEventListener('resize', refitAll);
